fix App overflow

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ font-family: 'Major Mono Display', monospace;
   flex-flow: column nowrap;
   align-items: center;
   gap: 30px;
-  overflow: auto;
+  overflow: scroll;
   width: 100%;
   height: 100dvh;
   padding: 20px 20px;
